# plexus

./: AUTHORS  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml  run_tests.py
docs/: SPEC.md
examples/: demo_conversation.py
src/plexus/: __init__.py  cells.py  field.py  identity.py  lattice.py  pool.py  ratchet.py  session.py
tests/: conftest.py  test_cells.py  test_field.py  test_identity.py  test_lattice.py  test_pool.py  test_ratchet.py  test_session.py
