[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plexus-protocol"
version = "0.1.0"
description = "A post-quantum, metadata-resistant secure-messaging protocol (reference implementation)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "Ideatrino", email = "ideatrino@proton.me" }]
maintainers = [{ name = "Ideatrino", email = "ideatrino@proton.me" }]
keywords = [
    "cryptography",
    "post-quantum",
    "secure-messaging",
    "ring-lwe",
    "double-ratchet",
    "metadata-resistance",
    "one-time-pad",
    "forward-secrecy",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Communications :: Chat",
]
dependencies = ["numpy>=1.21"]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff", "black"]

[project.urls]
Homepage = "https://github.com/Ideatrino/plexus"
Repository = "https://github.com/Ideatrino/plexus"
Issues = "https://github.com/Ideatrino/plexus/issues"
Changelog = "https://github.com/Ideatrino/plexus/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]
